# cip-ai-assistant

./: README.md
Datasetmaker/: DataFormats.cpp  DataFormats.h  DatasetsMaker.cpp
FileStandart/: README.md
FileStandart/00.001/: README.md
NeiroHandMaker/: NeiroHandMaker.cpp
autoencoder/: ReadMe.md  activation.cpp  activation.h  autoencoder.cpp  autoencoder.h  data_form.cpp  data_form.h  neiron.h
autoencoder_pre_work_version/: activate_functions.h  activation_function.cpp  activation_function.h  builder.h  layer.cpp  layer.h  neiron.cpp  neiron.h  neural_network.h  teacher.h
data/: README.MD  data_5.csv
neural_network/: ActivationFunction.h  Adapters.cpp  Adapters.h  Builder.cpp  Builder.h  Director.cpp  Director.h  Layer.cpp  Layer.h  Neirons.cpp  Neirons.h  NeuralNetwork.cpp  NeuralNetwork.h  Neural_network.cpp  Teacher.cpp  Teacher.h  first.dnb
neural_network/Common/: DataDumper.cpp  DataDumper.h  DataFormats.cpp  DataFormats.h  DataReader.cpp  DataReader.h  DataReformer.cpp  DataReformer.h  WARNING.cpp  WARNING.h
neural_network/DataManipulator/: CMakeLists.txt  DataManipulator.cpp  DataManipulator.h  MainOCDFMenu.cpp  MainOCDFMenu.h  MainTDFMenu.cpp  MainTDFMenu.h  TDFCreator.cpp  TDFCreator.h  readme.md
neural_network/PyVisualisation/: CidInfo.py  OCDF_OneCid_Visual.py  OCDF_SixCids_Visual.py  TDF_Visual.py  ZoomPan.py
